--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,9 +8,10 @@ body {
   font-family: "nunito";
   color: #f2ebe2; }
 
-p {
+.main {
   margin: 20px;
-  text-align: center; }
+  text-align: center;
+  font-size: 20px; }
 
 nav {
   list-style-type: none;
@@ -43,13 +44,27 @@ a {
       grid-area: main; }
     .gridContainer footer {
       grid-area: footer; }
-    .gridContainer .redes {
+    .gridContainer .redes, .gridContainer .redes-fb, .gridContainer .redes-ins {
       grid-area: redes; } }
 
 footer {
   color: #f2ebe2;
-  font-size: 16px;
+  font-size: 14px;
   text-align: center; }
+
+.redes, .redes-fb, .redes-ins {
+  text-align: center;
+  border-radius: 20px;
+  border: 1px;
+  background-color: #f2ebe2;
+  color: #403d39; }
+
+.redes-fb {
+  background-color: #50514f;
+  color: white; }
+
+.redes-ins {
+  background-color: #f3dfc1; }
 
 .logo {
   color: #f2ebe2; }
