--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,8 +1,17 @@
-//colores de la marca
-
 $negro: #403d39;
 $gris:#50514f;
 $beige:#ccc5b9;
 $claro: #f2ebe2;
 $amarillo: #f3dfc1;
 $marron:#d6c6b0;
+
+
+
+//$paleta:(
+//	negro: #403d39,
+//	gris: #50514f,
+//	beige: #ccc5b9,
+//	claro: #f2ebe2,
+//	amarillo: #f3dfc1,
+//	marron: #d6c6b0
+//	);
